Flask: Regenerate code for APIv0.0.2
