# Flask-Server/openapi_server/models/__init__.py
@@ -16,6 +16,7 @@ from openapi_server.models.user_details import UserDetails
 from openapi_server.models.vendor_add_product_images_request import VendorAddProductImagesRequest
 from openapi_server.models.vendor_add_product_request import VendorAddProductRequest
 from openapi_server.models.vendor_change_product_availabile_request import VendorChangeProductAvailabileRequest
+from openapi_server.models.vendor_details import VendorDetails
 from openapi_server.models.vendor_edit_product_request import VendorEditProductRequest
 from openapi_server.models.vendor_get_requested_orders200_response_inner import VendorGetRequestedOrders200ResponseInner
 from openapi_server.models.vendor_get_requested_orders200_response_inner_order_items_inner import VendorGetRequestedOrders200ResponseInnerOrderItemsInner
